# dramatica-flow

./: .env.example  .gitignore  README.md  README_EN.md  check_imports.py  demo_ollama.py  dramatica_flow_timeline.html  dramatica_flow_timeline_v2.html  dramatica_flow_web_ui.html  install.bat  install.sh  install_mac.sh  pyproject.toml  run_tests.py  setup.py  启动服务器.bat  启动网页界面.bat  启动网页界面.command
cli/: main.py
core/: pipeline.py  server.py
core/agents/: __init__.py
core/llm/: __init__.py
core/narrative/: __init__.py
core/state/: __init__.py
core/types/: narrative.py
docs/: CHANGELOG.md  OLLAMA_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  大模型配置指南.md
docs/plans/: 2026-04-24-simulation-first-writing-system-design.md  2026-04-25-component-borrowing-decisions.md  2026-04-25-research-landscape.md  2026-04-25-storybox-study-notes.md  README.md
examples/: quickstart.py
templates/: novel_extract_prompt.md  outline_import_template.md
tests/: test_integration.py  test_llm.py  test_server.py  test_threads.py
